# Contact-form

./: .stylelintrc.json  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  rest.http  tsconfig.json
css/: home.css  home.css.map
js/: script  script.js
scss/home/: _main.scss  _mediaqueries.scss  home.css  home.css.map
scss/partials/assembler/: _debug.scss  _normalize.scss  _root.scss  _typography.scss
scss/partials/structure/: _footer.scss  _header.scss
scss/partials/tools/: _functions.scss  _mixins.scss  _placeholders.scss  _variables.scss
ts/: script.ts
