[project]
name = "contact-form"
version = "0.1.0"
description = "fast-api"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "fastapi>=0.115.6",
    "mypy>=1.14.1",
    "pylint>=3.3.3",
    "python-multipart>=0.0.20",
    "rich>=13.9.4",
    "uvicorn>=0.34.0",
]
